@@ -101,7 +101,6 @@
 #include "SegmentedString.h"
 #include "SelectionController.h"
 #include "Settings.h"
-#include "StorageEvent.h"
 #include "StyleSheetList.h"
 #include "TextEvent.h"
 #include "TextIterator.h"
@@ -126,6 +125,10 @@
 #if ENABLE(DATABASE)
 #include "Database.h"
 #include "DatabaseThread.h"
+#endif
+
+#if ENABLE(DOM_STORAGE)
+#include "StorageEvent.h"
 #endif
 
 #if ENABLE(XPATH)
@@ -2658,8 +2661,10 @@ PassRefPtr<Event> Document::createEvent(const String& eventType, ExceptionCode& 
         return OverflowEvent::create();
     if (eventType == "ProgressEvent")
         return ProgressEvent::create();
+#if ENABLE(DOM_STORAGE)
     if (eventType == "StorageEvent")
         return StorageEvent::create();
+#endif
     if (eventType == "TextEvent")
         return TextEvent::create();
     if (eventType == "UIEvent" || eventType == "UIEvents")
